@startuml
package ConnectHobby {
  class Person {
     + id: int
     + first_name: String
     + last_name: String
     + email: String
     + birth_date: LocalDate
     + home_phone_number: String
     + work_phone_number: String
     + mobile_phone_number: String
     + address: Address
     + creation_date: LocalDate


  }

  class Address {
     + zip: int
     + cityName: String
     + regionName: String
     + MunicipalityName: String
  }

  class ZipCode {
     + ZipCodeID: int
     + Code: String
     + CityName: String
  }

  class Hobby {
     + HobbyID: int
     + Name: String
     + wikiLink: String
     + Category: HobbyCategory
     + Type: HobbyType
  }

  enum HobbyCategory {
     + CategoryID: int
     + CategoryName: String
  }

  enum HobbyType {
     + TypeID: int
     + TypeName: String
  }

  class Event {
     + EventID: int
     + name: String
     + createdBy: Person
     + attendees: Set<Person>
     + hobby: Hobby
     + address : String
     + description: String
     + price: double
     + creationDate: LocalDate

  }


  Person "n" --> "1" Address : lives at >
  Address "n" --> "1" ZipCode : is in >
  Person "1" -- "n" Hobby : has >
  Hobby "n" --> "1" HobbyCategory : belongs to >
  Hobby "n" --> "1" HobbyType : belongs to >
  Person "n" -- "m" Event : attends >
  Person "1" -- "n" Event : hosts >
  Hobby "1" -- "n" Event : relates to <
}
@enduml

